@@ -1,1 +1,1 @@
-This Program generates an array of 399 x 399 maps. Each map is randomly generated when the user travels to the map for the first time. When the program starts the user begins at the center of the world aka (0, 0). The user can traverse the world by using the commands n, s, e, w, and f x y. Finally, the command q is used to quit the game.
+This Program generates an array of 399 x 399 maps. Each map is randomly generated when the user travels to the map for the first time. When the program starts the user begins at the center of the world aka (0, 0). The user can traverse the world by using the commands n, s, e, w, and f x y. Finally, the command q is used to quit the game. The program also prints out the hiker and rival distance maps. The distance is displayed in in two digits where the digits represent the distance mod 100.
